--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fan2misa/monabsence#readme",
   "dependencies": {
+    "docxtemplater": "^2.1.5",
     "electron": "^1.4.4",
     "file-saver": "^1.3.3",
     "jquery": "^3.1.1"
