--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "electron": "^1.4.4",
     "file-saver": "^1.3.3",
     "jquery": "^3.1.1"
+  },
+  "devDependencies": {
+    "electron-packager": "^8.1.0"
   }
 }
