--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "docxtemplater": "^2.1.5",
     "electron": "^1.4.4",
+    "electron-json-storage": "^2.0.3",
     "file-saver": "^1.3.3",
     "jquery": "^3.1.1"
   },
