--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "foundation-sites": "^6.2.4",
-    "foundation-datepicker": "^1.5.5"
+    "foundation-datepicker": "^1.5.5",
+    "font-awesome": "^4.7.0"
   }
 }
