--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/fan2misa/monabsence#readme",
   "dependencies": {
     "docxtemplater": "^2.1.5",
+    "docxtemplater-image-module": "^1.0.4",
     "electron": "^1.4.4",
     "electron-json-storage": "^2.0.3",
     "file-saver": "^1.3.3",
