--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron": "^1.4.4",
     "electron-json-storage": "^2.0.3",
     "file-saver": "^1.3.3",
+    "image-size": "^0.5.0",
     "jquery": "^3.1.1"
   },
   "devDependencies": {
